--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body{
 }
 
 .bg{
- background:url("images/back.png");
+ background:url("images/pattern2.png");
  background-repeat: repeat;
  width:100%;
  padding: 1px;
@@ -16,9 +16,11 @@ body{
 }
 
 .navbar-inverse{
-	
-	  margin-bottom: 0px;
-	border-radius: 0px;
+
+  margin-top: 0px;
+  border-top-width: 0px;
+  margin-bottom: 0px;
+  border-radius: 0px;
   border-top: 0.9px solid #9e9301;
   border-bottom:0.9px solid #9e9301;
       position: sticky;
@@ -27,39 +29,24 @@ body{
       background:black;
       background-image:url(images/bg.jpg);
       background-repeat: repeat;
-}
-
-.jam{
-	background:url(images/aboutus2.jpg);
-}
-
-.pro,.ab{
-	color:white;
 
 }
-.fsize , .ab{
-font-size:12px;
+
+.slide{
+
+  margin-bottom: 0px;
+  top: 0px;
+  margin-top: 0px;
 }
 
-.container a{
-	text-decoration:none;
-	color:grey;
+.carousel-caption{
+  padding-bottom: 100px;
 }
 
-.container a:hover{
-	color:white;
+h2,h3{
+  text-align: center;
 }
 
-
-.col-sm-8{
-	word-spacing:0.5em;
-}
-
-.img{
-width:400px;
-height:400px;
-margin-top:10px;
-}
 
 
 
@@ -88,6 +75,7 @@ p{
 
 .textindent a{
   color:white;
+  text-decoration: none;
 }
 
 
