--- a/reasons.css
+++ b/reasons.css
@@ -4,7 +4,7 @@ body{
 }
 
 .bg{
- background:url("images/pattern2.png");
+ background:url("images/back.png");
  background-repeat: repeat;
  width:100%;
  padding: 1px;
@@ -16,11 +16,9 @@ body{
 }
 
 .navbar-inverse{
-
-  margin-top: 0px;
-  border-top-width: 0px;
-  margin-bottom: 0px;
-  border-radius: 0px;
+	
+	  margin-bottom: 0px;
+	border-radius: 0px;
   border-top: 0.9px solid #9e9301;
   border-bottom:0.9px solid #9e9301;
       position: sticky;
@@ -29,25 +27,35 @@ body{
       background:black;
       background-image:url(images/bg.jpg);
       background-repeat: repeat;
-
-}
-
-.slide{
-
-  margin-bottom: 0px;
-  top: 0px;
-  margin-top: 0px;
-}
-
-.carousel-caption{
-  padding-bottom: 120px;
-}
-
-h2,h3{
-  text-align: center;
 }
 
 
+
+
+.jam{
+	background:url(images/aboutus2.jpg);
+}
+
+.pro,.ab{
+	
+	color:white;
+
+}
+.fsize , .ab{
+font-size:12px;
+}
+
+.col-sm-9{
+word-spacing:3px;	
+}
+.container a{
+	text-decoration:none;
+	color:grey;
+}
+
+.container a:hover{
+	color:white;
+}
 
 
 /* ------ footer --------- */
@@ -66,7 +74,6 @@ h2,h3{
 
 p{
   text-align: left;
-  
 }
 
 
@@ -76,7 +83,6 @@ p{
 
 .textindent a{
   color:white;
-  text-decoration: none;
 }
 
 
@@ -103,3 +109,12 @@ text-decoration: none;
 .fa-stack:hover{
   color:#eb6c04;
 }
+
+/* ------------------- end footer --------- */
+
+
+
+
+
+
+
